--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=5000
+#server.port=5000
 spring.datasource.url=jdbc:mysql://bitcoin.cdgdbfweslzx.us-east-1.rds.amazonaws.com:3306/bitcoin
 spring.datasource.username=bekdev
 spring.datasource.password=AB5939523
